Closed
Bug 184458
Opened 23 years ago
Closed 23 years ago
ActiveX plugin does not resolve relative CODEBASE URLS [fails on Ofoto.com]
Categories
(Core Graveyard :: Embedding: ActiveX Wrapper, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: peterlubczynski-bugs, Assigned: peterl-bugs)
References
()
Details
Attachments
(1 file)
|
2.97 KB,
patch
|
adamlock
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
This bug was orriginally being tracked in bug 173069 but I think it's better to
give it its own bug. The Active-X plugin is failing to install on Ofoto.com
To repro:
1. Login: peterl@netscape.com/password
2. Under add pictures, select the drag and drop option from the left when asked
to add single photos.
Expected Results:
Asked to install Active-X control.
| Reporter | ||
Comment 1•23 years ago
|
||
This patch attempts to resolve relative URLS on CODEBASE by getting the base
URL from the DOM document and resolving it with |nsIURI::Resolve|. This code is
wrapped in #ifdef XPC_IDISPATCH_SUPPORT because nsIDocument is not frozen.
| Reporter | ||
Updated•23 years ago
|
Attachment #108757 -
Flags: superreview?(darin)
Attachment #108757 -
Flags: review?(adamlock)
Comment 2•23 years ago
|
||
Comment on attachment 108757 [details] [diff] [review]
patch v.1
hmm... looks alright to me. provided adam is happy, sr=darin.
Updated•23 years ago
|
Attachment #108757 -
Flags: superreview?(darin) → superreview+
Comment on attachment 108757 [details] [diff] [review]
patch v.1
r=adamlock
Another reason for the #ifdef is the use of NPNVDOMElement and nsString classes
which older versions of Mozilla / NS don't support or get seriously upset
about.
Attachment #108757 -
Flags: review?(adamlock) → review+
| Reporter | ||
Comment 4•23 years ago
|
||
patch in trunk, marking FIXED
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•