Resolve relative URLs on CODEBASE, bug 184458 r=adamlock sr=darin